// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-datepicker date big min and max limit 1`] = `
<div>
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
  model value = 2000-01-01
</div>
`;

exports[`Storyshots modul-components|m-datepicker date format invalid 1`] = `
<div>
  <div
    class="m-datepicker m--has-validation-message"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                aria-invalid="true"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <p
        aria-live="polite"
        class="m-validation-message__error"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Entrez une date au format AAAA-MM-JJ
        </span>
      </p>
       
      <!---->
    </div>
  </div>
  model value = 2000-19-12
</div>
`;

exports[`Storyshots modul-components|m-datepicker date off limit  max 1`] = `
<div>
  <div
    class="m-datepicker m--has-validation-message"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                aria-invalid="true"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <p
        aria-live="polite"
        class="m-validation-message__error"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Date hors limites
        </span>
      </p>
       
      <!---->
    </div>
  </div>
  model value = 2015-01-01
</div>
`;

exports[`Storyshots modul-components|m-datepicker date off limit min 1`] = `
<div>
  <div
    class="m-datepicker m--has-validation-message"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                aria-invalid="true"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <p
        aria-live="polite"
        class="m-validation-message__error"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Date hors limites
        </span>
      </p>
       
      <!---->
    </div>
  </div>
  model value = 2000-01-01
</div>
`;

exports[`Storyshots modul-components|m-datepicker default 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker disabled 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-disabled m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              disabled="disabled"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
              disabled="disabled"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker error-message 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-error m--has-validation-message m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              aria-invalid="true"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <p
      aria-live="polite"
      class="m-validation-message__error"
    >
      <svg
        class="m-svg m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        this is an error
      </span>
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker events 1`] = `
<div>
  <p
    class="m-u--no-margin"
  >
    Model value = "2011-01-01"
    <br />
    skipInputValidation = "true"
  </p>
  <div
    class="m-datepicker m-u--margin-top"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
  <p>
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset model 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </p>
  <p>
    <div
      class="m-checkbox m--is-checkbox-left m--is-checked"
    >
      <input
        aria-describedby="fakeId"
        class="m-checkbox__hidden"
        id="mCheckbox-fakeId"
        type="checkbox"
      />
       
      <label
        class="m-checkbox__wrap"
        for="mCheckbox-fakeId"
      >
        <span
          aria-hidden="true"
          class="m-checkbox__input"
        >
          <span
            class="m-checkbox__input__icon"
          />
        </span>
         
        <div
          class="m-checkbox__label"
        >
          skipInputValidation
        </div>
      </label>
       
      <div
        class="m-validation-message m-checkbox__message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-datepicker helper-message 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-validation-message m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <p
      class="m-validation-message__helper"
    >
      AAAA-MM-JJ
    </p>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker hide-internal-error-message 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-error m--has-value m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              aria-invalid="true"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker label 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDatepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Date label
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker label-up 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-label-up m--has-label m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDatepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Date label
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker min and max 1`] = `
<div>
  <p>
    <strong>
      Model value:
    </strong>
     2008-02-02
  </p>
   
  <p>
    <strong>
      Date min:
    </strong>
     2000-01-10
  </p>
   
  <p>
    <strong>
      Date max:
    </strong>
     2008-03-20
  </p>
   
  <div
    class="m-datepicker m-u--margin-top"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-u--margin-top"
  >
    <button
      class="m-button m-u--margin-right m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Reset value 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m-u--margin-right m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Date in the range 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m-u--margin-right m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Date out de range 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker placeholder 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-value m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="Lorem Ipsum"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker readonly 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-readonly m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
              readonly="readonly"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
              disabled="disabled"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker required-marker 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDatepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Date label
            </span>
             
            <sup
              aria-hidden="true"
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
              required="required"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker skip-input-validation=true 1`] = `
<div>
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId undefined"
                autocomplete="off"
                id="mDatepicker-fakeId"
                placeholder="AAAA-MM-JJ"
              />
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-hidden="true"
                class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                tabindex="-1"
                title="Ouvrir le calendrier"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
      id="fakeId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
  model value = 9999-99-99
</div>
`;

exports[`Storyshots modul-components|m-datepicker valid 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-valid m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker waiting 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-waiting m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
              readonly="readonly"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
              disabled="disabled"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <div
              class="m-spinner m-input-style__spinner"
            >
              <!---->
               
              <div />
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker/initial-view days 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker/initial-view years-months 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-validation-message m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <p
      class="m-validation-message__helper"
    >
      Range between 2000 and 2030
    </p>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker/initial-view years-months-birthdate 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-label m--has-validation-message m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDatepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Birthdate
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <p
      class="m-validation-message__helper"
    >
      Range between 1900 and 2000
    </p>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker/type full-date 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM-JJ"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-datepicker/type years-months 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__main"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId undefined"
              autocomplete="off"
              id="mDatepicker-fakeId"
              placeholder="AAAA-MM"
            />
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-hidden="true"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              tabindex="-1"
              title="Ouvrir le calendrier"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
    id="fakeId"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;
